/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
     * cBuffer not initialized, fixed.

2002-01-16 00:44 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * common/hbffind.c
    ! DosFindFirst() call on OS/2 section of file was wrong (parameter findcount was not
      set to any correct value)
      NOTE: OS/2 builds of Alpha 38 _are broken_ because of this bug

2002-01-15 22:30 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * contrib/rdd_ads/ads1.c
    * Added virtual method adsExit() with a call of AdsApplicationExit()

2002-01-15 20:40 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/pp/ppcore.c
    ! bug fixed, reported by Juan Agustin Barriga

2002-01-15 11:25 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
    ! bug fixed, reported by Wilson 'W' Gamboa A ( indexing of an empty dbf )

2002-01-14 21:53 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source\common\hbffind.c
    * replaced 3 literals with proper defines
    * minor formatting.

2002-01-14 21:32 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source\rtl\direct.c
    * updated default flags to include ReadOnly

2002-01-14 19:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  * contrib/libct/files.c
    ! RSXNT fixes.
  * contrib/libct/keyset.c
    ! DOS BCC fixes.
  * contrib/libgt/Makefile
  * contrib/libgt/makefile.bc
  * contrib/libgt/makefile.vc
    ! Renamed the GT library file from libgt to gt in order to match
      the library file renaming for the libct and libmisc libraries.
  * source/common/hbffind.c
    ! DOS BCC fixes.
  * source/common/hbfhnd.c
    ! DOS BCC fixes.
  * source/common/hbgete.c
    ! OS/2 IBM C++ fix.
  * source/rtl/filehb.c
    ! OS/2 IBM C++ fix.

2002-01-14 15:05 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source\common\hbffind.c